# aula_13

./: README.md  anotações.txt  pyproject.toml
data/txt-files/: teste1.txt
src/lib/classes/: FilesSources.py
src/lib/classes/aws/: s3.py
